# SpeakServer

./: CMakeLists.txt  README.md
Client/Speaker/: Speaker.slnx
Client/Speaker/Speaker/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  LoginPage.xaml  LoginPage.xaml.cs  MauiProgram.cs  Speaker.csproj
Client/Speaker/Speaker/Converters/: InverseBoolConverter.cs
Client/Speaker/Speaker/Models/: ConfigConstants.cs  LoginViewModel.cs
Client/Speaker/Speaker/Pages/: ChatPage.xaml  ChatPage.xaml.cs  ChatPopup.xaml  ChatPopup.xaml.cs
Client/Speaker/Speaker/Services/: Interfacese.cs  ServerMessage.cs  UserInfo.cs
Client/Walkie-Talkie/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  GlobalXmlns.cs  LoginPage.xaml  LoginPage.xaml.cs  MauiProgram.cs  README.txt  Walkie-Talkie.csproj
Client/Walkie-Talkie/Converters/: InverseBoolConverter.cs
Client/Walkie-Talkie/Models/: ConfigConstants.cs  LoginViewModel.cs
Client/Walkie-Talkie/Pages/: ChannelPopup.xaml  ChannelPopup.xaml.cs  ChatPage.xaml  ChatPage.xaml.cs  ChatPopup.xaml  ChatPopup.xaml.cs
Client/Walkie-Talkie/Services/: AudioBase.cs  Interfacese.cs  ServerMessage.cs  UserInfo.cs
config/: config.json  server_config.json
include/: audio_File.hpp  audio_stream.hpp  client_session.hpp  config_loader.hpp  control_message.hpp  server.hpp  utils.hpp
src/: audio_File.cpp  audio_stream.cpp  client_session.cpp  config_loader.cpp  control_message.cpp  main.cpp  server-multiple.txt  server.cpp  utils.cpp
